# podcast-getter

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: cli.rs  config.rs  download.rs  feed.rs  image.rs  main.rs  state.rs  tagger.rs
